[project]
name = "ai-integration-learn"
version = "0.1.0"
description = "Learning about AI & integrations in python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.5.2",
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.8",
    "langsmith>=0.3.43",
    "openai>=1.82.1",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=4.1.0",
    "tiktoken>=0.9.0",
]
